# Django_Ethereum

./: pyproject.toml
core/project/settings/: __init__.py  base.py  development.py  utils_config.py
